src/types/snapshots/cake__types__session__tests__session_json_function_call.snap
---
source: src/types/session.rs
expression: session_json_for(&item)
---
{
  "arguments": "{\"cmd\":\"ls\"}",
  "call_id": "call-1",
  "id": "fc-1",
  "name": "bash",
  "timestamp": "2026-05-10T00:00:00Z",
  "type": "function_call"
}
