src/types/snapshots/cake__types__session__tests__session_json_function_call_output.snap
---
source: src/types/session.rs
expression: session_json_for(&item)
---
{
  "call_id": "call-1",
  "output": "result",
  "timestamp": "2026-05-10T00:00:00Z",
  "type": "function_call_output"
}
