src/types/snapshots/cake__types__session__tests__session_json_limit_exceeded.snap
---
source: src/types/session_tests.rs
expression: session_record_json(record)
---
{
  "duration_ms": 1250,
  "error": "max_turns limit exceeded after 5 turns (max_turns = 5)",
  "is_error": true,
  "limit": "max_turns",
  "result": "I'll inspect the workspace.",
  "session_id": "550e8400-e29b-41d4-a716-446655440000",
  "subtype": "limit_exceeded",
  "task_id": "550e8400-e29b-41d4-a716-446655440001",
  "tool_call_count": 3,
  "turn_count": 5,
  "type": "task_complete",
  "usage": {
    "input_tokens": 100,
    "input_tokens_details": {
      "cache_write_tokens": 0,
      "cached_tokens": 25
    },
    "output_tokens": 50,
    "output_tokens_details": {
      "reasoning_tokens": 10
    },
    "total_tokens": 150
  }
}
