src/types/snapshots/cake__types__session__tests__session_json_reasoning_with_content.snap
---
source: src/types/session_tests.rs
expression: session_json_for(&item)
---
{
  "content": [
    {
      "text": "deep analysis",
      "type": "reasoning_text"
    }
  ],
  "encrypted_content": "gAAAAABencrypted...",
  "id": "r-1",
  "summary": [
    {
      "text": "step 1",
      "type": "summary_text"
    }
  ],
  "timestamp": "2026-05-10T00:00:00Z",
  "type": "reasoning"
}
