src/types/snapshots/cake__types__session__tests__session_json_session_meta.snap
---
source: src/types/session_tests.rs
expression: session_record_json(record)
---
{
  "cake_version": "1.2.3-test",
  "format_version": 4,
  "git": {
    "branch": "main",
    "commit_hash": "abcdef1234567890",
    "repository_url": "https://example.com/cake.git"
  },
  "model": "gpt-5.4",
  "model_config": "test",
  "session_id": "550e8400-e29b-41d4-a716-446655440000",
  "system_prompt": "You are cake.",
  "timestamp": "2026-05-10T12:34:56Z",
  "tools": [
    "bash",
    "read",
    "edit"
  ],
  "type": "session_meta",
  "working_directory": "/workspace/cake"
}
